--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   solr1:
-    image: solr:latest
+    image: solr:9.6
     container_name: solr1
     ports:
-      - "8981:8983"
+     - "8981:8983"
     environment:
       - ZK_HOST=zoo1:2181,zoo2:2181,zoo3:2181
     networks:
@@ -13,15 +13,14 @@ services:
       - zoo2
       - zoo3
     volumes:
-      - solr_data:/var/solr
-    command: ["solr", "-f"]
-
+      - ./configsets/myconfig:/opt/solr/server/solr/configsets/myconfig
+      - solr1_data:/var/solr
 
   solr2:
-    image: solr:latest
+    image: solr:9.6
     container_name: solr2
     ports:
-      - "8982:8983"
+     - "8982:8983"
     environment:
       - ZK_HOST=zoo1:2181,zoo2:2181,zoo3:2181
     networks:
@@ -31,15 +30,14 @@ services:
       - zoo2
       - zoo3
     volumes:
-      - solr_data:/var/solr
-    command: ["solr", "-f"]
-
+      - ./configsets/myconfig:/opt/solr/server/solr/configsets/myconfig
+      - solr2_data:/var/solr
 
   solr3:
-    image: solr:latest
+    image: solr:9.6
     container_name: solr3
     ports:
-      - "8983:8983"
+     - "8983:8983"
     environment:
       - ZK_HOST=zoo1:2181,zoo2:2181,zoo3:2181
     networks:
@@ -49,11 +47,11 @@ services:
       - zoo2
       - zoo3
     volumes:
-      - solr_data:/var/solr
-    command: ["solr", "-f"]
+      - ./configsets/myconfig:/opt/solr/server/solr/configsets/myconfig
+      - solr3_data:/var/solr
 
   zoo1:
-    image: zookeeper:latest
+    image: zookeeper:3.7
     container_name: zoo1
     restart: always
     hostname: zoo1
@@ -69,7 +67,7 @@ services:
       - solr
 
   zoo2:
-    image: zookeeper:latest
+    image: zookeeper:3.7
     container_name: zoo2
     restart: always
     hostname: zoo2
@@ -85,7 +83,7 @@ services:
       - solr
 
   zoo3:
-    image: zookeeper:latest
+    image: zookeeper:3.7
     container_name: zoo3
     restart: always
     hostname: zoo3
@@ -104,4 +102,6 @@ networks:
   solr:
 
 volumes:
-  solr_data:
+  solr1_data:
+  solr2_data:
+  solr3_data:
